# file-transfer

./: .gitignore  Makefile  README.md  loss.sh  perf.sh  pyproject.toml
.github/workflows/: linter.yml  tests.yml
results/: pl_00_perf.txt  pl_05_perf.txt  pl_10_perf.txt  pl_20_perf.txt  pl_40_perf.txt
src/: client.py  download.py  parser.py  server.py  start-server-saw.py  start-server.py  upload-saw.py  upload.py
src/lib/: constant.py  parser.py  protocol.py
src/parser/: parser.py
src/stop-and-wait/: client-download.py  client-stop-and-wait.py  constant.py
tests/: performance.py  test_download.py  test_saw_send.py  test_up.py  test_upload.py
tests/helpers/: constant.py  process.py  tmpfile.py  utils.py
wireshark-plugin/: dissector-install.md  ntftp.lua
